[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ageml"
version = "0.0.1"
description = "Age Modelling Package"
authors = [ "Computational Neuroimaging Lab Bilbao",
            "jorge.garcia.condado <jorgegarciacondado@gmail.com>",
            "inigo.tellaetxe <inigotellaetxe@gmail.com>"
            ]
maintainers = ["jorge.garcia.condado <jorgegarciacondado@gmail.com>",
                "inigo.tellaetxe <inigotellaetxe@gmail.com>"
                ]
readme = "README.md"
repository = "https://github.com/compneurobilbao/AgeModelling"
license = "GPL-3.0-only"
keywords = ["Age Modelling", "Brain Age"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
packages = [{include = "ageml", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8, <3.12"
numpy = "1.24"
pandas = "2.0"
scipy= "1.10"
matplotlib = "3.5"
scikit-learn= "1.3"
coverage-conditional-plugin = "^0.7.0"

[tool.poetry.dev-dependencies]
nox-poetry = "*"
# Testing
pytest = "*"
pytest-cov = "*"
coverage_conditional_plugin = "*"
# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-broken-line = "*"
flake8-comprehensions = "*"
# Formatting
black = {version = "^23.1a1", allow-prereleases = true}